# AIGuardSIEM

./: go.mod  go.sum
api/: main.go
api/gateway/: server.go
api/handlers/: alerts.go  cases.go  events.go  other_handlers.go  rules.go
api/middleware/: auth.go  common.go
collectors/: CMakeLists.txt
collectors/common/: CMakeLists.txt
collectors/common/include/aiguard/common/: circular_buffer.h  config.h  ecs_schema.h  event.h  kafka_consumer.h  kafka_producer.h  metrics.h  thread_pool.h
collectors/common/src/: circular_buffer.cpp  config.cpp  ecs_schema.cpp  event.cpp  kafka_consumer.cpp  kafka_producer.cpp  metrics.cpp  thread_pool.cpp
collectors/netflow/: CMakeLists.txt
collectors/netflow/include/aiguard/netflow/: netflow_collector.h  netflow_parser.h
collectors/netflow/src/: netflow_collector.cpp  netflow_parser.cpp  netflow_server.cpp
collectors/pcap/: CMakeLists.txt
collectors/pcap/include/aiguard/pcap/: dpdk_capture.h  flow_tracker.h
collectors/pcap/src/: dpdk_capture.cpp  flow_tracker.cpp  pcap_capture.cpp  pcap_server.cpp
collectors/syslog/: CMakeLists.txt
collectors/syslog/include/aiguard/syslog/: syslog_collector.h  syslog_parser.h
collectors/syslog/src/: syslog_collector.cpp  syslog_parser.cpp  syslog_server.cpp
collectors/syslog/tests/: CMakeLists.txt  test_syslog_collector.cpp  test_syslog_parser.cpp
collectors/winlog/: CMakeLists.txt
collectors/winlog/include/aiguard/winlog/: winlog_collector.h  winlog_parser.h
collectors/winlog/src/: winlog_collector.cpp  winlog_parser.cpp  winlog_server.cpp
config/: agent.yaml  netflow_collector.yaml  pcap_collector.yaml  stream_processor.yaml  syslog_collector.yaml
config/ml_models/: config.yaml
config/sigma_rules/: c2_beacon.yml  credential_dumping.yml  data_exfiltration.yml  dns_exfiltration.yml  fileless_attack.yml  lateral_movement_rdp.yml  malware_process_creation.yml  port_scan.yml  powershell_encoded.yml  privilege_escalation.yml  registry_persistence.yml  ssh_brute_force.yml  suspicious_dns.yml  web_attack_sql_injection.yml  web_attack_xss.yml
connectors/aws/: cloudtrail.go
connectors/azure/: azure_connector.go
connectors/gcp/: gcp_connector.go
crypto/: CMakeLists.txt
crypto/include/aiguard/crypto/: crypto_utils.h  tls_accelerator.h
crypto/src/: crypto_utils.cpp  tls_accelerator.cpp
crypto/tests/: CMakeLists.txt  test_crypto.cpp
deployment/ansible/: deploy.yml
deployment/helm/siem-xdr/: Chart.yaml  values.yaml
deployment/helm/siem-xdr/templates/: deployment.yaml
deployment/kubernetes/: api-gateway.yaml  clickhouse.yaml  kafka.yaml  namespace.yaml  stream-processor.yaml  syslog-collector.yaml
deployment/operator/: controllers.go
deployment/terraform/: main.tf
deployment/terraform/modules/aws/: main.tf
docker/: api-gateway.Dockerfile  ml-inference.Dockerfile  soar-engine.Dockerfile  soc-dashboard.Dockerfile  syslog-collector.Dockerfile  viz-backend.Dockerfile
docs/api/: openapi.yaml
docs/architecture/: C4-System.md
docs/deployment/: RUNBOOK.md
docs/ml/: MODEL_CARDS.md
docs/performance/: BENCHMARKS.md
engine/: CMakeLists.txt
engine/correlation/: CMakeLists.txt
engine/correlation/include/aiguard/engine/: correlation_engine.h  event_windows.h  stream_processor.h
engine/correlation/src/: correlation_engine.cpp  event_windows.cpp  stream_processor.cpp
engine/correlation/tests/: CMakeLists.txt  test_correlation_engine.cpp  test_event_windows.cpp
engine/rules/: CMakeLists.txt
engine/rules/include/aiguard/engine/: rule_engine.h  sigma_compiler.h
engine/rules/src/: rule_engine.cpp  sigma_compiler.cpp
engine/rules/tests/: CMakeLists.txt  test_sigma_compiler.cpp
engine/windows/: CMakeLists.txt
ml/: pyproject.toml
ml/feature_engineering/: cicflow_features.py
ml/inference/: ensemble.py  onnx_inference.py
ml/models/: ueba_engine.py
ml/models/deep_learning/: cnn_payload.py  lstm_anomaly.py
ml/models/reinforcement/: q_learning.py
ml/models/supervised/: random_forest_ids.py
ml/models/unsupervised/: isolation_forest.py
ml/training/: pipeline.py
playbooks/: engine.py  investigate_phishing.yml  isolate_compromised_host.yml
services/orchestrator/: main.go  scheduler.go
storage/: CMakeLists.txt
storage/cold/: s3_archive.go
storage/hot/: CMakeLists.txt
storage/hot/include/aiguard/storage/: lsm_index.h  memtable.h  query_engine.h  sstable.h
storage/hot/src/: lsm_index.cpp  memtable.cpp  query_engine.cpp  sstable.cpp
storage/hot/tests/: CMakeLists.txt  test_lsm_index.cpp  test_memtable.cpp
storage/warm/: clickhouse_client.go
viz/backend/: main.go  server.go
viz/dashboards/: soc_realtime.py
viz/dashboards/assets/: soc.css
xdr/agent/: CMakeLists.txt
xdr/agent/common/include/aiguard/agent/: agent_core.h
xdr/agent/common/src/: agent_comms.cpp  agent_core.cpp  event_collector.cpp
xdr/agent/linux/: agent_main.cpp  ebpf_tracer.cpp  kprobe_monitor.cpp
xdr/cloud/kubernetes/: k8s_audit.go
