[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aiguard-ml"
version = "1.0.0"
description = "AIGuardSIEM ML/AI Pipeline for Intrusion Detection"
authors = ["AIGuard <security@aiguard.io>"]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.0"
xgboost = "^2.0.3"
lightgbm = "^4.2.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
tensorflow = "^2.15.0"
onnx = "^1.15.0"
onnxruntime = "^1.17.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
scipy = "^1.12.0"
networkx = "^3.2"
plotly = "^5.18.0"
dash = "^2.14.0"
kafka-python = "^2.0.2"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
tqdm = "^4.66.0"
joblib = "^1.3.2"
imbalanced-learn = "^0.12.0"
optuna = "^3.5.0"
psutil = "^5.9.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.8.0"
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=aiguard_ml --cov-report=html --cov-report=term"
